Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-03 (SVN):
    * utils/dcc/dcc.c (DccStatement): Statement pointer k in a for loop was
      being initialized using an unsigned statement->a value and this used
      to result in a mistake of emitting while instead of if.  The current
      hw hcode is an example: see the if (map_next == "map_sequence_start")
      check in while(1) loop in world.hc::GetNextMap(). The code is changed
      to use statement->a explicitly cast to signed short, just like in the
      similar case found in AddProgramFlowInfo().

2011-06-02 (SVN):
    * Removed Visual Studio 2008 project files, because the VS2005 versions
      perfectly import into VS2008.

2011-06-02 (SVN):
    * Recompiled all windows x64 libraries using the latest mingw-w64 tools.

2011-06-01 (SVN):
    * Moved crc.c and crc.h under libs/common/. Removed utils/common/crc.[ch]
      and added utils/hcc[_old]/crchash.[ch]. Those hash functions are only
      for progs the compiler and include crc.[ch].
    * Moved hwal.h, pakfile.h, q_endian.c, qsnprint.c, qsnprint.h, strl_fn.h,
      strlcpy.c and strlcat.c to under libs/common/ .

2011-06-01 (SVN):
    * Makefiles: Added build rules for $(LIBS_DIR)/common/%.c so that I
      can move some commonly used sources under libs/common/ .

2011-06-01 (SVN):
    * Changed beta version stamp to 2011-06-01.
    * rpm/hexen2.spec: Updated after the h2patch/xdelta3 changes.

2011-06-01 (SVN):
    * docs/ReleaseNotes-1.5.0: Updated after the h2patch/xdelta3 changes.
    * docs/README: Updated after the h2patch/xdelta3 changes.

2011-06-01 (SVN):
    * gamecode/patch111: Renamed README.txt file to patchdat.txt.

2011-06-01 (SVN):
    * h2patch: Added a standalone pak patch application built upon the
      xdelta3 library.

2011-06-01 (SVN):
    * launcher/Makefile: Fix flags.

2011-06-01 (SVN):
    * gamecode/patch111: README.txt update.
    * launcher: Bumped version to 1.0.5.
